Corrected wallet loading bug, switched dapp to edonet and added wallet auto connection

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@ledgerhq/hw-transport-u2f": "^5.22.0",
-    "@taquito/beacon-wallet": "^8.0.3-beta.0",
-    "@taquito/ledger-signer": "^8.0.3-beta.0",
-    "@taquito/taquito": "^8.0.3-beta.0",
+    "@taquito/beacon-wallet": "^8.1.0",
+    "@taquito/ledger-signer": "^8.1.0",
+    "@taquito/taquito": "^8.1.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i && git add . && git commit -m \"Updated Taquito version\" && git push"
+    "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i"
   },
   "eslintConfig": {
     "extends": "react-app"
