--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@ledgerhq/hw-transport-u2f": "^5.22.0",
-    "@taquito/beacon-wallet": "^9.2.0-stablelib.0",
-    "@taquito/ledger-signer": "^9.2.0-stablelib.0",
-    "@taquito/taquito": "^9.2.0-stablelib.0",
+    "@taquito/beacon-wallet": "^10.2.1",
+    "@taquito/ledger-signer": "^10.2.1",
+    "@taquito/taquito": "^10.2.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
