--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "private": true,
   "dependencies": {
     "@ledgerhq/hw-transport-u2f": "^5.22.0",
-    "@taquito/beacon-wallet": "^10.2.1",
-    "@taquito/ledger-signer": "^10.2.1",
-    "@taquito/taquito": "^10.2.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
+    "@taquito/beacon-wallet": "^14.0.0",
+    "@taquito/ledger-signer": "^14.0.0",
+    "@taquito/taquito": "^14.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.0",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
+    "buffer": "^6.0.3",
     "qrcode-generator": "^1.4.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.4"
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i"
   },
   "eslintConfig": {
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0"
   }
 }
