--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/react-map-gl": "^6.1.3",
     "buffer": "^6.0.3",
+    "mapbox-gl": "^2.10.0",
     "qrcode-generator": "^1.4.4",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
