--- a/package.json
+++ b/package.json
@@ -1,50 +1,30 @@
 {
   "name": "taquito-boilerplate-react",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.2.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@taquito/beacon-wallet": "^14.0.0",
-    "@taquito/taquito": "^14.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.0",
-    "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
+    "@taquito/beacon-wallet": "^17.0.0",
+    "@taquito/taquito": "^17.0.0",
+    "@types/node": "^20.3.1",
     "buffer": "^6.0.3",
     "qrcode-generator": "^1.4.4",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.8.4"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "stream-browserify": "^3.0.0",
+    "events": "^3.3.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
-    "os-browserify": "^0.3.0",
-    "stream-browserify": "^3.0.0"
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
